# mtg-notion-manager

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
config/: card_match_overrides.json  confirmed_card_mapping.example.json  deck_page_mapping.example.json  dedupe_exclusions.json  intentional_duplicate_cards.json
config/confirmed_card_title_updates/: strixhaven.example.json
docs/architecture/review_governed_limited_apply/: README.md  architecture_baseline.md  (+6 more)
src/mtg_notion_manager/: card_match_overrides.py  cli.py  config.py  exceptions.py  intentional_duplicates.py  mapping.py  models.py  preview.py
tests/: test_apply_dedupe_plan.py  test_apply_price_link_dedupe.py  test_audit_duplicates.py  test_card_match_overrides.py  test_card_names.py  test_card_repository.py  test_card_resolution.py  test_cli.py  test_cli_apply_dedupe_plan.py  test_cli_apply_price_link_dedupe.py  test_cli_audit_duplicates.py  test_cli_dedupe_cards.py  test_cli_import_article.py  test_cli_import_cards.py  test_cli_plan_title_updates.py  test_cli_review_duplicate_conflicts.py  test_cli_verify_import.py  test_deck_page_mapping.py  test_deck_page_mapping_integration.py  test_decklist.py  test_dedupe_cards.py  test_dedupe_repository.py  test_doctor.py  test_fetchers.py  test_fetchers_retry.py  test_import_article.py  test_import_cards.py  test_import_deck.py  test_intentional_duplicates.py  test_mapping.py  test_notion_client.py  test_notion_writer.py  test_review_duplicate_conflicts.py  test_single_card_title_update.py  test_title_update_dry_run.py  test_verify_import.py
tests/fixtures/: mtgjp_full_decklist_100.html  mtgjp_multi_deck.html  mtgjp_single_deck.html  wizards_multi_deck.html  wizards_single_deck.html
(+24 files in other folders)
